# computer_physics

./: README.md
docs/: README.md  _config.yml  calc_random.cpp  hello_world.cpp  hello_world.py  very_important.cpp
docs/include/: very_important.h
exercises_supplemental/: CMakeLists.txt
exercises_supplemental/.kdev4/: exercises_supplemental.kdev4
exercises_supplemental/01_OrdinaryDifferentialEquations/: ode.py
exercises_supplemental/01_OrdinaryDifferentialEquations/motivation/: VortragODE.tex
exercises_supplemental/02_PDE/: compileit.sh  makemovie.sh  plot.py  predator-prey-pde.cpp
exercises_supplemental/02_PDE/motivation/: RauberBeutePDE.tex  predator_prey_pde.tex
exercises_supplemental/02_PDE/motivation/img/: Gitter.odg  Gitter1.eps  Gitter2.eps  Hecht.eps  Karpfen.eps
exercises_supplemental/03_RandomNumbers/: Vorlage.cpp
exercises_supplemental/05_MonteCarlo/: CMakeLists.txt  IS.cpp  LJ_basic.cpp
exercises_supplemental/06_MolecularDynamics/: CMakeLists.txt  advices.txt  compile.sh  compile_infos.txt  encode.sh  mdbasic_0.c  mdbasic_0.in
exercises_supplemental/06_MolecularDynamics/include/: in_mddefs.h  in_namelist.c  in_proto.h
exercises_supplemental/07_QuantumMonteCarlo/: CMakeLists.txt  bosehubbard.cpp  bosehubbard.h
exercises_supplemental/08_ExactDiagonalization/: CMakeLists.txt  Lanczos.cpp
exercises_supplemental/plotting/: plot_bosehubbard.py  plot_lanczos.py
exercises_supplemental/random_number_tests/: CMakeLists.txt  test_boost.cpp  test_gsl.cpp  test_std.cpp
problem_sheets_src/01_OrdinaryDifferentialEquations/: 01_ODE.tex
(+7 files in other folders)
